--- a/identifying_circles.ipynb
+++ b/identifying_circles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x20e31b05940>"
+       "<matplotlib.image.AxesImage at 0x283a36ead60>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -103,18 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\f",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cropped_imgs = []\n",
     "cropped_imgs_txt = []\n",
@@ -137,36 +128,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "150-NG-015-300\n",
+      "GRM REVIEWED\n",
+      "‘SIGNATURE,\n",
       "\n",
-      "    \n",
-      "    \n",
+      "J.CONNOLLY\n",
+      "\n",
+      " \n",
+      "\n",
+      "GRM TAILINGS ID\n",
+      "\n",
+      " \n",
+      "\n",
+      "ACONEX DRAWING NUMBER:\n",
+      "GY04—26300-E-DRG-00036\n",
+      "\n",
+      " \n",
+      "\n",
+      "GOONYELLA RIVERSIDE MINE\n",
+      "GS1 NORTH (GS1A) TAILINGS DAM - MCC22\n",
+      "DECANT PUMP PTD002\n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      "TERMINATION DIAGRAM\n",
+      "os is GRM-054630 ° GY-71-22323_0\n",
+      "2010.04.01\n",
+      "\n",
       " \n",
       "\n",
       " \n",
       "\n",
       " \n",
       "\n",
-      " \n",
+      "CAD FILE: GY-71-22323_0.dwq STATUS: AS CONSTRUCTED\n",
       "\n",
       " \n",
       "\n",
-      " \n",
-      "\n",
-      "100-N6-099-300\n",
+      "ShT Size\n",
       "\n",
       " \n",
       "\n",
-      "100-NG.015-300\n",
+      "Scale\n",
       "\n",
-      "HN.\n",
+      "N.T.S\n",
+      "\n",
+      "Rev. No.\n",
+      "\n",
+      "0\n",
       "\f",
       "\n"
      ]
@@ -174,7 +191,7 @@
    ],
    "source": [
     "# print(pytesseract.image_to_string(cv2.imread('text_test.jpg')))\n",
-    "print(pytesseract.image_to_string(cv2.imread('pid_test.jpg')))"
+    "print(pytesseract.image_to_string(cv2.imread('pid_box_test.png')))"
    ]
   }
  ],
