--- a/identifying_circles.ipynb
+++ b/identifying_circles.ipynb
@@ -19,7 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = 'pid_test5.jpg'\n",
+    "img_path = '.\\images_tests\\pid_test5.jpg'\n",
+    "image = img_path\n",
     "img = cv2.imread(image, 1)\n",
     "img_orig = img.copy()\n",
     "img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
@@ -68,7 +69,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x283a36ead60>"
+       "<matplotlib.image.AxesImage at 0x1d33c2f0a60>"
       ]
      },
      "execution_count": 5,
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +192,8 @@
    ],
    "source": [
     "# print(pytesseract.image_to_string(cv2.imread('text_test.jpg')))\n",
-    "print(pytesseract.image_to_string(cv2.imread('pid_box_test.png')))"
+    "img_box_txt = '.\\images_tests\\pid_box_test.png'\n",
+    "print(pytesseract.image_to_string(cv2.imread(img_box_txt)))"
    ]
   }
  ],
